<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kalkulator Sederhana</string>
    <string name="error_message">Error</string>
    <string name="invalid_message">Invalid</string>

    <string name="initial_display_value">0</string>
    <string name="button_history">History</string>
    <string name="button_clear_history">Clear Hist</string>
    <string name="button_clear">C</string>
    <string name="button_plus_minus">+/-</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">x</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_add">+</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_subtract">-</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_equal">=</string>
    <string name="button_dot">.</string>
    <string name="button_zero">0</string>
    <string name="button_modulus">%</string>
    <string name="button_power">^</string>
</resources>